# plugin-manager

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.ja.md  README.md  THIRD_PARTY_LICENSES.md  about.md.hbs  about.toml  clippy.toml  deny.toml  install.sh
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.spec-to-issues/: issues-plan.md
docs/: code-review-issue-254-2026-05-06.md  code-review-issue-254-followup-2026-05-06.md  codex-hooks-conversion-implementation-plan-2026-05-06.md  design-marketplace-browse-install.md  gap-analysis-claude-code-plugin.md  getting-started.md  github-fetcher.md  import.md  index.md  issue-254-duplicate-naming-followup-2026-05-06.md  issue-255-endpoint-abstraction-response-2026-05-05.md  issue-262-endpoint-review.md  issue-264-common-state-design-2026-05-05.md  issue-265-implementation-check-2026-05-06.md  issue-283-endpoint-production-migration-policy.md  issue-284-code-review-2026-05-05.md  issue-340-parser-helper-commonization-2026-07-13.md  plm-plan-v3.md  plm-plan-v4.md  plm-plan-v5.md  plm-plan.md  review-216-plugin-components-cache.md  review-duplicate-roles-2026-05-03.md  review-issue-362-cursor-docs-inventory.md  review-issue-362-cursor-docs.md  review-issue-392-skill-bundled-resources.md  roadmap.md  spec-032-default-managed-launch.md  sync-endpoint-duplication-2026-05-04.md  tui-model-cachestate-field-comparison-2026-05-05.md
scripts/: check-public-screen-model.sh  install.sh
src/: application.rs  cli.rs  cli_test.rs  commands.rs  commands_test.rs  component.rs  config.rs  config_test.rs  domain.rs  env.rs  env_test.rs  error.rs  format.rs  fs.rs  fs_test.rs  hooks.rs  host.rs  host_test.rs  http.rs  http_test.rs  import.rs  install.rs  install_test.rs  main.rs  marketplace.rs  output.rs  parser.rs  path_ext.rs  path_ext_test.rs  plugin.rs  repo.rs  repo_proptests.rs  repo_test.rs  scan.rs  source.rs  source_test.rs  sync.rs  sync_test.rs  target.rs  target_test.rs  (+1 more)
(+532 files in other folders)
