[package]
name = "plm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
zip = "2"
walkdir = "2"
glob = "0.3"
owo-colors = "4"
indicatif = "0.17"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
